# gameoflife

./: LICENSE  README.md  pyproject.toml  roadmap.md
.github/workflows/: build.yml  main.yml  test.yml
src/gameOfLife/: main.py
src/gameoflife/: __init__.py  customerrors.py  gui.py  main.py
tests/: conftest.py  test_main.py
