[tool.poetry]
name = "gameoflife"
version = "0.3.0"
description = ""
authors = ["Kevin Focke <19843342+KevinFocke@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
asciimatics = "^1.14.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
pyinstaller = "^5.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
